<resources>
    <string name="app_name">CoachLea</string>
    <string-array name="Minimal_Pairs">
        <item>gold</item>
        <item>geld</item>
        <item>sand</item>
        <item>wand</item>
        <item>see</item>
        <item>tee</item>
        <item>hose</item>
        <item>rose</item>
        <item>huhn</item>
        <item>hut</item>
        <item>baum</item>
        <item>schaum</item>
        <item>geld</item>
        <item>welt</item>
        <item>tasche</item>
        <item>tasse</item>
    </string-array>
    <string-array name="Minimal_Pairs_plosives">
        <item>kanne</item>
        <item>tanne</item>
        <item>kopf</item>
        <item>topf</item>
        <item>wecker</item>
        <item>wetter</item>
        <item>kasse</item>
        <item>tasse</item>
        <item>keller</item>
        <item>teller</item>
        <item>kraene</item>
        <item>traene</item>
        <item>nagel</item>
        <item>nadel</item>
        <item>bogen</item>
        <item>boden</item>
        <item>feger</item>
        <item>feder</item>
        <item>waage</item>
        <item>wade</item>
        <item>nabel</item>
        <item>nadel</item>
        <item>wabe</item>
        <item>wade</item>
        <item>bach</item>
        <item>dach</item>
        <item>geld</item>
        <item>gelb</item>
        <item>pass</item>
        <item>fass</item>
        <item>topf</item>
        <item>zopf</item>
        <item>tee</item>
        <item>zeh</item>
        <item>tasse</item>
        <item>tatze</item>
        <item>katze</item>
        <item>kasse</item>
        <item>dieb</item>
        <item>sieb</item>
        <item>zahn</item>
        <item>hahn</item>
        <item>tonne</item>
        <item>sonne</item>
        <item>baecker</item>
        <item>wecker</item>
        <item>baelle</item>
        <item>welle</item>
        <item>mauer</item>
        <item>bauer</item>
        <item>oma</item>
        <item>opa</item>
        <item>pferd</item>
        <item>herd</item>
        <item>brei</item>
        <item>hai</item>
        <item>bauch</item>
        <item>lauch</item>
        <item>dorn</item>
        <item>horn</item>
        <item>baum</item>
        <item>schaum</item>
        <item>bus</item>
        <item>nuss</item>
        <item>dose</item>
        <item>rose</item>
        <item>klammer</item>
        <item>hammer</item>
        <item>fisch</item>
        <item>tisch</item>
        <item>gitter</item>
        <item>ritter</item>
        <item>kuh</item>
        <item>schuh</item>
        <item>kutsche</item>
        <item>rutsche</item>
        <item>seife</item>
        <item>pfeife</item>
        <item>clown</item>
        <item>zaun</item>
        <item>kuss</item>
        <item>bus</item>
    </string-array>
    <string-array name="Minimal_Pairs_fricatives">
        <item>schal</item>
        <item>saal</item>
        <item>schuppe</item>
        <item>suppe</item>
        <item>tasche</item>
        <item>tasse</item>
        <item>busch</item>
        <item>bus</item>
        <item>sand</item>
        <item>hand</item>
        <item>salz</item>
        <item>hals</item>
        <item>kirche</item>
        <item>kirsche</item>
        <item>weich</item>
        <item>weiss</item>
        <item>faecher</item>
        <item>faesser</item>
        <item>kueche</item>
        <item>kuesse</item>
        <item>topf</item>
        <item>zopf</item>
        <item>tee</item>
        <item>zeh</item>
        <item>tasse</item>
        <item>tatze</item>
        <item>kasse</item>
        <item>katze</item>
        <item>fahne</item>
        <item>sahne</item>
        <item>fee</item>
        <item>see</item>
        <item>pass</item>
        <item>fass</item>
        <item>dieb</item>
        <item>sieb</item>
        <item>zahn</item>
        <item>hahn</item>
        <item>tonne</item>
        <item>sonne</item>
        <item>schnecke</item>
        <item>hecke</item>
        <item>spiegel</item>
        <item>igel</item>
        <item>baum</item>
        <item>schaum</item>
        <item>kuh</item>
        <item>schuh</item>
        <item>seife</item>
        <item>pfeife</item>
        <item>clown</item>
        <item>zaun</item>
        <item>schal</item>
        <item>wal</item>
        <item>reh</item>
        <item>see</item>
    </string-array>
    <string-array name="Minimal_Pairs_lateral">
        <item>lunge</item>
        <item>junge</item>
        <item>lacke</item>
        <item>jacke</item>
        <item>rose</item>
        <item>lose</item>
        <item>gras</item>
        <item>glas</item>
        <item>ratte</item>
        <item>latte</item>
        <item>leiter</item>
        <item>reiter</item>
        <item>beil</item>
        <item>bein</item>
        <item>lupe</item>
        <item>hupe</item>
        <item>bauch</item>
        <item>lauch</item>
    </string-array>
    <string-array name="Minimal_Pairs_trills">
        <item>reis</item>
        <item>heiss</item>
        <item>rasen</item>
        <item>hasen</item>
        <item>rand</item>
        <item>hand</item>
        <item>rose</item>
        <item>hose</item>
        <item>rose</item>
        <item>lose</item>
        <item>gras</item>
        <item>glas</item>
        <item>ratte</item>
        <item>latte</item>
        <item>leiter</item>
        <item>reiter</item>
        <item>dose</item>
        <item>rose</item>
        <item>gitter</item>
        <item>ritter</item>
        <item>kutsche</item>
        <item>rutsche</item>
        <item>watte</item>
        <item>ratte</item>
        <item>reh</item>
        <item>see</item>
    </string-array>
    <string-array name="Minimal_Pairs_others">
        <item>maehen</item>
        <item>naehen</item>
        <item>schwamm</item>
        <item>schwan</item>
        <item>ringe</item>
        <item>rinne</item>
        <item>nase</item>
        <item>hase</item>
        <item>maus</item>
        <item>haus</item>
        <item>mund</item>
        <item>hund</item>
    </string-array>
    <string-array name="image_recognition_fricative">
        <item>fisch</item>
        <item>flasche</item>
        <item>frosch</item>
        <item>hexe</item>
        <item>haus</item>
        <item>heizung</item>
        <item>hase</item>
        <item>hund</item>
        <item>vogel</item>
        <item>eichhoernchen</item>
        <item>stuhl</item>
        <item>marienkaefer</item>
        <item>schiff</item>
        <item>schokolade</item>
        <item>schere</item>
        <item>schlange</item>
        <item>schluessel</item>
        <item>schuh</item>
        <item>schwein</item>
        <item>pilz</item>
        <item>zange</item>
        <item>pflaster</item>
        <item>wurst</item>
    </string-array>
    <string-array name="image_recognition_plosive">
        <item>anker</item>
        <item>apfel</item>
        <item>auto</item>
        <item>ball</item>
        <item>bank</item>
        <item>baum</item>
        <item>berg</item>
        <item>bett</item>
        <item>blume</item>
        <item>brille</item>
        <item>buch</item>
        <item>drachen</item>
        <item>dusche</item>
        <item>elefant</item>
        <item>erdbeere</item>
        <item>feder</item>
        <item>fenster</item>
        <item>gabel</item>
        <item>gespenst</item>
        <item>giesskanne</item>
        <item>gitarre</item>
        <item>glas</item>
        <item>jacke</item>
        <item>kanne</item>
        <item>katze</item>
        <item>kleid</item>
        <item>knoepfe</item>
        <item>korb</item>
        <item>krokodil</item>
        <item>kuh</item>
        <item>lampe</item>
        <item>mond</item>
        <item>nagel</item>
        <item>nest</item>
        <item>pferd</item>
        <item>rad</item>
        <item>rutsche</item>
        <item>schmetterling</item>
        <item>schnecke</item>
        <item>tasche</item>
        <item>tasse</item>
        <item>taucher</item>
        <item>telefon</item>
        <item>teller</item>
        <item>tiger</item>
        <item>topf</item>
        <item>wippe</item>
        <item>zebra</item>
        <item>zitrone</item>
        <item>zwerg</item>
    </string-array>
    <string-array name="image_recognition_nasal">
        <item>nuss</item>
        <item>schornstein</item>
        <item>schwein</item>
        <item>sonne</item>
        <item>spinne</item>
        <item>zange</item>
        <item>eimer</item>
        <item>milch</item>
        <item>ananas</item>
    </string-array>
    <string name="animal_sounds">Tierlaute</string>
    <string name="needed">Permission needed</string>
    <string name="permissions">"Um diese Applikation nutzen zu können müssen sie zustimmen dass diese App Ihr Mikrofon, Ihre Kamera und Zugriff auf Ihren Speicher bekommt"</string>
    <string name="Home">Home</string>
    <string name="Snail_race">Schneckenrennen</string>
    <string name="messageAgain">Da ist etwas schiefgegangen, bitte versuche es nochmal!</string>
    <string name="messageEmpty">Du musst etwas sagen!</string>
    <string name="record">Aufnahme</string>
    <string name="recording">Aufnehmen...</string>
    <string name="done">Fertig</string>
    <string name="again">Nochmal</string>
    <string name="motivation">Weiter so!</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Telefon Nummer</string>
    <string name="birthdate">Geburtsdatum</string>
    <string name="sex">Geschlecht</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="divers">Divers</string>
    <string name="typeOfImplant">Art des Implantats</string>
    <string name="cochlearImplant">Cochlear Implantat</string>
    <string name="hearingAid">Hörgerät</string>
    <string name="both">bei-\ndes</string>
    <string name="none">kei-\nnes</string>
    <string name="sideOfImplant">Seite des Implantats</string>
    <string name="right">rechts</string>
    <string name="left">links</string>
    <string name="smoker">Raucher</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="save">Speichern</string>
    <string name="back">Zurück</string>
    <string name="Profile">Profil</string>
    <string name="UploadPictures">Laden Sie Bilder hoch</string>
    <string name="UploadPicturesGallery">Laden Sie Bilder von Ihrer Gallerie hoch!</string>
    <string name="Gallery">Gallerie</string>
    <string name="Login">Login</string>
    <string name="LoginScreenInformation">Willkommen bei CoachLea, der Cochlea-Implantat-Test-App für Kinder. Diese App ist dazu da, um Daten über die Sprache und das Hörvermögen von Kindern mit Cochlea-Implantat zu sammeln und auszuwerten. Um dies zu ermöglichen, muss eine tägliche Einheit von Übungen abgeschlossen werden. Dabei wird das Kind von der Schnecke Lea begleitet. Lea ist Teil der verschiedenen Übungen, erklärt diese, und gibt nach absolvierter Übung ermutigendes Feedback. Außerdem gibt es die Möglichkeit ein Profil zu erstellen, in dem wichtige Daten über das Kind gespeichert werden. Um all das zu verwirklichen benötigt CoachLea den Zugriff auf das Mikrofon und den Speicher dieses Gerätes. Um das zu erlauben, drücken Sie den Start Knopf und im dann erscheinenden Popup-Fenser auf \“Zulassen“\. Drücken Sie nun den Start Knopf um mit der Erstellung des Profils zu beginnen. \nLos geht’s!</string>
    <string name="startExercise">START</string>
    <string name="exercise">Übungen</string>
    <string name="dailySession">Tägliche \nTrainingseinheit</string>
    <string name="settings">Einstellungen</string>
    <string name="vowelText">Sag den Vokal</string>
    <string name="minimal_pairs">Minimalpaare</string>
    <string name="trainingset_capion">Starte deine tägliche Trainingseinheit!</string>
    <string name="trainingset_text">Deine heutigen Aufgaben sind:</string>
</resources>