<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_blue"
    tools:context=".other_activities.Trainingset">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_height="420dp"
        android:layout_width="360dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:background="@drawable/chat_bubble"
        >

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainingset_capion"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/dark_teal"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trainingset_text"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/dark_teal"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="2dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="60dp"
                  android:layout_marginBottom="20dp"
                  app:cardCornerRadius="10dp"
                  android:layout_marginHorizontal="20dp"
                  >
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"
                      >
                      <TextView
                          android:id="@+id/SetExercise1"
                          android:background="@drawable/layout_square_frame"
                          android:gravity="center"
                          android:text="@string/minimal_pairs"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/dark_teal"
                          android:textSize="23dp"
                          android:textStyle="bold"
                          android:textAllCaps="false"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="60dp"
                  android:layout_marginBottom="20dp"
                  app:cardCornerRadius="10dp"
                  android:layout_marginHorizontal="20dp">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/layout_square_frame"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"
                      >
                      <TextView
                          android:id="@+id/SetExercise2"
                          android:gravity="center"
                          android:text="@string/animal_sounds"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/dark_teal"
                          android:textSize="23dp"
                          android:textStyle="bold"
                          android:textAllCaps="false"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="60dp"
                  android:layout_marginBottom="20dp"
                  app:cardCornerRadius="10dp"
                  android:layout_marginHorizontal="20dp">
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@drawable/layout_square_frame"
                      android:orientation="horizontal"
                      android:gravity="center_horizontal"
                      >
                      <TextView
                          android:id="@+id/SetExercise3"
                          android:gravity="center"
                          android:text="@string/Snail_race"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/dark_teal"
                          android:textSize="23dp"
                          android:textStyle="bold"
                          android:textAllCaps="false"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>
          </LinearLayout>

      </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingRight="30dp">

            <ImageButton
                android:layout_marginTop="70dp"
                android:id="@+id/start_trainingset"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:background="@drawable/layout_round_button"
                android:foreground="@drawable/ic_play" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:gravity="end"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/lea"
                android:paddingRight="1dp"/>

        </LinearLayout>




    </LinearLayout>


</LinearLayout>